--- a/app/components/TrueFocus.css
+++ b/app/components/TrueFocus.css
@@ -9,6 +9,36 @@
   animation: trueFocusIn 0.5s ease forwards;
 }
 
+.true-focus-char.space {
+  margin-right: 0.5em;
+}
+
+.true-focus-char:not(.space) {
+  margin-right: 0.1em;
+}
+
+/* Génération des délais d'animation pour chaque caractère */
+.true-focus-char:nth-child(1) { animation-delay: 0.05s; }
+.true-focus-char:nth-child(2) { animation-delay: 0.1s; }
+.true-focus-char:nth-child(3) { animation-delay: 0.15s; }
+.true-focus-char:nth-child(4) { animation-delay: 0.2s; }
+.true-focus-char:nth-child(5) { animation-delay: 0.25s; }
+.true-focus-char:nth-child(6) { animation-delay: 0.3s; }
+.true-focus-char:nth-child(7) { animation-delay: 0.35s; }
+.true-focus-char:nth-child(8) { animation-delay: 0.4s; }
+.true-focus-char:nth-child(9) { animation-delay: 0.45s; }
+.true-focus-char:nth-child(10) { animation-delay: 0.5s; }
+.true-focus-char:nth-child(11) { animation-delay: 0.55s; }
+.true-focus-char:nth-child(12) { animation-delay: 0.6s; }
+.true-focus-char:nth-child(13) { animation-delay: 0.65s; }
+.true-focus-char:nth-child(14) { animation-delay: 0.7s; }
+.true-focus-char:nth-child(15) { animation-delay: 0.75s; }
+.true-focus-char:nth-child(16) { animation-delay: 0.8s; }
+.true-focus-char:nth-child(17) { animation-delay: 0.85s; }
+.true-focus-char:nth-child(18) { animation-delay: 0.9s; }
+.true-focus-char:nth-child(19) { animation-delay: 0.95s; }
+.true-focus-char:nth-child(20) { animation-delay: 1s; }
+
 @keyframes trueFocusIn {
   0% {
     opacity: 0;
